css/typography.scss
body { /* Base styles */
    font-family: 'Lato', sans-serif;
    text-align: center;
}

h1 { /* Post List Title */
    font-size: 25px;
    text-align: left;
    font-weight: 700;
    text-decoration: none;
	
	&:hover {
		color: $dark-blue;
	}
	
	span {
		font-weight: 300;
        color: #000 !important;
	}
}

h2 { /* Single Post Title */
	text-align: center;
	font-size: 25px;
	
	span {
		font-weight: 300;
		font-size: 20px;
		
		&:after {
			content: '';
			width: 75%;
			height: 1px;
			display: block;
			margin: 1.5rem auto;
			background-color: #dedede;
		}
	}	
}

h3 { /* Me page cards */
    font-size: 27px;
    text-align: center;
    font-weight: 300;
    color: black;
}

h4 { /* Post Detail Line */
    font-weight: 300;
    font-size: 15px;
	text-align: left;
	line-height: 10px;
}

h5 { /* Header Title */
    font-size: 20px;
    margin-left: 25px;
    float: center;
    display: block;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 1.7px;
    margin: 0;
    -webkit-margin-before: 0;
    -webkit-margin-after: 0;
}

a {
	&:hover { color: #2a92d3; text-decoration: none; }
	&:active{ color: #2a92d3; text-decoration: none;}
	&:link 	{ color: black; text-decoration: none; }
}

.entry {
	padding: 15px;
    
	a {
		color: black;
		
		&:hover {
            transition: .2s ease;
			text-decoration: underline;
			color: $dark-blue;
		}
	}
}

p {
    line-height: 30px;
}

blockquote {
    background: #f8f8f8;
    padding: 20px;
    width: 100%;
    margin-left: 0;
    margin: 0;
    border-left: 7px solid $dark-blue;
    
}

code {
    font-size: 80%;
    border: 1px solid #a3a3a3;
    border-radius: 5px;
    padding: 0px 5px 0px 5px;
    margin: 0px 5px 0px 5px;
    background: #f8f8f8;
}

@media #{$break-small} {
    
    h1 {
        font-size: 22px;
    }
    
    h3 {
		font-size: 22px;	
	}
}

@media #{$break-medium} {

}

